# trading-journal

backend/trading-journal/: .env  pyproject.toml
backend/trading-journal/src/trading_journal/: auth.py  db.py  main.py  models.py
backend/trading-journal/src/trading_journal/router/: account.py  tradeDetails.py  tradingDailyBook.py  trading_plan.py  user.py
client/trading-client/: package-lock.json  package.json
client/trading-client/src/: middleware.ts
client/trading-client/src/app/: globals.css  page.tsx
client/trading-client/src/app/accounts/: page.tsx
client/trading-client/src/app/daily-book/: page.tsx
client/trading-client/src/app/dashboard/: page.tsx
client/trading-client/src/app/login/: page.tsx
client/trading-client/src/app/register/: page.tsx
client/trading-client/src/app/trade-record/: page.tsx
client/trading-client/src/app/trading-plan/: page.tsx
client/trading-client/src/components/: Navbar.tsx  ProtectedRoute.tsx
client/trading-client/src/context/: AuthContext.tsx
client/trading-client/src/services/: api.ts  trading_plan.ts
client/trading-client/src/types/: trading_plan.types.ts
